--- a/kale_notebooks/practica_2_debugger.ipynb
+++ b/kale_notebooks/practica_2_debugger.ipynb
@@ -1,26 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Implementación de Pipeline\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "https://core.ac.uk/download/pdf/234624411.pdf"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "block:import_packages"
@@ -36,25 +18,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
     "tags": [
-     "block:matrix_definition_a",
+     "block:matrix_defintion_a",
      "prev:import_packages"
     ]
    },
    "outputs": [],
    "source": [
-    "\n",
-    "A = np.array([[1,  0],\n",
-    "              [0,  2],\n",
-    "              [3, 2]])"
+    "A = [[1,1,2],\n",
+    "    [1,1,-1],\n",
+    "    [-1,1,1]]"
    ]
   },
   {
@@ -68,8 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "b = np.array([4, 12, 18])"
+    "b = [9,2,4]"
    ]
   },
   {
@@ -83,48 +56,38 @@
    },
    "outputs": [],
    "source": [
-    "c = np.array([3, 5])"
+    "c = [1,1,-4]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": [
-     "block:initializing_object",
-     "prev:matrix_definition_b",
+     "block:defining_problem",
+     "prev:matrix_defintion_a",
      "prev:matrix_definition_c",
-     "prev:matrix_definition_a"
+     "prev:matrix_definition_b"
     ]
    },
    "outputs": [],
    "source": [
-    "model = Simplex(c,A,b,'Max')"
+    "problema = Simplex(c,A,b,problem='Min')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": [
-     "block:solving_model",
-     "prev:initializing_object"
+     "block:solving_problem",
+     "prev:defining_problem"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2.0, 6.0]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.solve()"
+    "x_result = problema.solve()\n",
+    "x_result"
    ]
   }
  ],
@@ -138,10 +101,10 @@
    "autosnapshot": false,
    "docker_image": "ferubio/pkg_optim_kale:0.1",
    "experiment": {
-    "id": "1617649e-a817-487e-8b36-06a4e4268d0e",
-    "name": "trial1"
+    "id": "new",
+    "name": "debugger"
    },
-   "experiment_name": "trial1",
+   "experiment_name": "debugger",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -156,8 +119,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Solving a linear programming maximization problem for profit maximization of a soap factory",
-   "pipeline_name": "simplex-dummy",
+   "pipeline_description": "Debugging simplex algorithm ",
+   "pipeline_name": "simplex-debugger",
    "snapshot_volumes": false,
    "steps_defaults": [],
    "volume_access_mode": "rwm",
