--- a/kale_notebooks/practica_2_debugger.ipynb
+++ b/kale_notebooks/practica_2_debugger.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Pipeline : Implementación en Simplex\n",
+    "\n",
+    "Mejora en numpy al definir las matrices"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "block:import_packages"
@@ -17,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "block:matrix_defintion_a",
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "block:matrix_definition_b",
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "block:matrix_definition_c",
@@ -56,12 +67,12 @@
    },
    "outputs": [],
    "source": [
-    "c = [1,1,-4]\n"
+    "c = [1,1,-4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "block:defining_problem",
@@ -77,18 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "block:solving_problem",
      "prev:defining_problem"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.3333333333333333, 0, 4.333333333333333]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_result = problema.solve()\n",
+    "x_result= problema.solve()\n",
     "x_result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -102,9 +131,9 @@
    "docker_image": "ferubio/pkg_optim_kale:0.1",
    "experiment": {
     "id": "new",
-    "name": "debugger"
+    "name": "numpydebugg"
    },
-   "experiment_name": "debugger",
+   "experiment_name": "numpydebugg",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -119,8 +148,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Debugging simplex algorithm ",
-   "pipeline_name": "simplex-debugger",
+   "pipeline_description": "testing debugg correction",
+   "pipeline_name": "debuggnumpy",
    "snapshot_volumes": false,
    "steps_defaults": [],
    "volume_access_mode": "rwm",
