--- a/lanzamientos_pipeline/Lanzamientos.ipynb
+++ b/lanzamientos_pipeline/Lanzamientos.ipynb
@@ -117,6 +117,7 @@
    },
    "outputs": [],
    "source": [
+    "#Minimización\n",
     "#Definimos la matriz A\n",
     "A = [[1,1,2],\n",
     "    [1,1,-1],\n",
@@ -229,6 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Maximización\n",
     "#Definimos la matriz A\n",
     "A = [[1, 0],\n",
     "    [0, 2],\n",
@@ -298,9 +300,27 @@
     "tags": []
    },
    "source": [
-    "**Lanzamiento 4 : Solución Infeasible**\n",
+    "**Lanzamiento 4 : Solución Unbounded**\n",
     "\n",
-    "Posteriormmente, se probó con un problema cuya solución era *infeasible*. El pipeline para probarlo fue el mismo que en los pipelines anteriores y los parámetros cambiaron porque justo buscamos un problema que cayera en ese supuesto.\n"
+    "Posteriormmente, se probó con un problema cuya solución era *Unbounded*. El pipeline para probarlo fue el mismo que en los pipelines anteriores y los parámetros cambiaron porque justo buscamos un problema que cayera en ese supuesto con los siguientes parámetros:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MAXIMIZACION\n",
+    "#Definimos la matriz A\n",
+    "A = [[1,0],  \n",
+    "     [2,-3]] \n",
+    "\n",
+    "#Definimos el vector B\n",
+    "b = [5,6]\n",
+    "\n",
+    "#Definimos el vector C\n",
+    "c = [-2,3]"
    ]
   },
   {
