--- a/kale_notebooks/practica_2_debugger.ipynb
+++ b/kale_notebooks/practica_2_debugger.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "### Pipeline : Implementación en Simplex\n",
     "\n",
-    "Mejora en numpy al definir las matrices"
+    "Mejora con numpy al definir las matrices"
    ]
   },
   {
