--- a/kale_notebooks/practica_2_parte_1_simplex.ipynb
+++ b/kale_notebooks/practica_2_parte_1_simplex.ipynb
@@ -6,21 +6,21 @@
     "tags": []
    },
    "source": [
-    "# Implementación de Pipeline\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "https://core.ac.uk/download/pdf/234624411.pdf"
+    "# Implementacion Pipeline : Prueba Kale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "block:import_packages"
@@ -30,19 +30,12 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from  Simplex import Simplex\n"
+    "from  Simplex import Simplex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "block:matrix_definition_a",
@@ -51,7 +44,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "A = np.array([[1,  0],\n",
     "              [0,  2],\n",
     "              [3, 2]])"
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "block:matrix_definition_b",
@@ -68,13 +60,12 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "b = np.array([4, 12, 18])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "block:matrix_definition_c",
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "block:initializing_object",
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "block:solving_model",
@@ -113,12 +104,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola mundo\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "[2.0, 6.0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,10 +136,10 @@
    "autosnapshot": false,
    "docker_image": "ferubio/pkg_optim_kale:0.1",
    "experiment": {
-    "id": "1617649e-a817-487e-8b36-06a4e4268d0e",
-    "name": "trial1"
+    "id": "new",
+    "name": "debugger"
    },
-   "experiment_name": "trial1",
+   "experiment_name": "debugger",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -156,8 +154,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Solving a linear programming maximization problem for profit maximization of a soap factory",
-   "pipeline_name": "simplex-dummy",
+   "pipeline_description": "Debugging simplex algorithm ",
+   "pipeline_name": "simplex-debugger",
    "snapshot_volumes": false,
    "steps_defaults": [],
    "volume_access_mode": "rwm",
