--- a/kale_notebooks/practica_2_LA_bikes.ipynb
+++ b/kale_notebooks/practica_2_LA_bikes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {
     "tags": [
      "imports"
@@ -13,12 +13,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
-    "from Simplex import Simplex\n"
+    "from Simplex import Simplex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {
     "tags": [
      "block:import_data"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {
     "tags": [
      "functions"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {
     "tags": [
      "block:concatenate_data",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {
     "tags": [
      "block:cleaning_data",
@@ -83,12 +83,12 @@
     "# Change to lower categorical variables\n",
     "cambiar_minusculas_variable(data,'trip_route_category')\n",
     "cambiar_minusculas_variable(data,'passholder_type')\n",
-    "cambiar_minusculas_variable(data,'bike_type')\n"
+    "cambiar_minusculas_variable(data,'bike_type')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -377,7 +377,7 @@
        "[227237 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {
     "tags": [
      "block:feature_engineering",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 53,
    "metadata": {
     "tags": [
      "block:feature_engineering_2",
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 54,
    "metadata": {
     "tags": [
      "block:matrix_definition",
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
@@ -640,7 +640,7 @@
       " [0 0 0 1 1 0 0]\n",
       " [0 0 0 0 0 1 1]]\n",
       "[1 1 1]\n",
-      "[-393620.5  -125952.75 -157378.2  -422192.75 -441465.5   -79897.75\n",
+      "[-393620.5  -125952.75  157378.2  -422192.75 -441465.5   -79897.75\n",
       "  -69856.85]\n"
      ]
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 57,
    "metadata": {
     "tags": [
      "block:model_definition",
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 58,
    "metadata": {
     "tags": [
      "block:model_solver",
@@ -676,12 +676,23 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization completed successfully !\n",
+      "Solution for x vector:\n",
+      "[0, 0, 1.0, 0, 0, 0, 0]\n",
+      "Optimal value:\n",
+      "-157378.19999999998\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[0, 0, 0, 0, 0, 0, 0]"
+       "([0, 0, 1.0, 0, 0, 0, 0], -157378.19999999998, 0)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,6 +700,13 @@
    "source": [
     "model.solve()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -702,9 +720,9 @@
    "docker_image": "ferubio/pkg_optim_kale:0.1",
    "experiment": {
     "id": "new",
-    "name": "simplex-trial"
+    "name": "bikeshake"
    },
-   "experiment_name": "simplex-trial",
+   "experiment_name": "bikeshake",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -719,8 +737,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Solves a business problem using simplex algorithm ",
-   "pipeline_name": "la-bikes-simplex",
+   "pipeline_description": "pipeline to test algorithm with practice 1",
+   "pipeline_name": "testwithdatabike",
    "snapshot_volumes": false,
    "steps_defaults": [],
    "volume_access_mode": "rwm",
